testsuite/tests/properties/invalid_prop_def/not_type.lkt
import common

class BarNode: FooNode {
    @exported fun prop(a: Entity): Int = 0
}
